--- a/BlazorChat.Client/Pages/Chat.razor
+++ b/BlazorChat.Client/Pages/Chat.razor
@@ -1,12 +1,11 @@
 ﻿@page "/chat"
 @using BlazorChat.ViewModels
-@using BlasorChat.Models
-@inject HttpClient Http
-@inject UserContainer User
+@inject MessageViewModel MessagesView
+@inject UserViewModel User
 
 <h1>Chat</h1>
 
-@if (messages == null)
+@if (MessagesView.Messages == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -27,7 +26,7 @@ else
 
     <div>
         <hr />
-        @foreach (var message in messages.Reverse())
+        @foreach (var message in MessagesView.Messages.Reverse())
         {
             <div>
                 <h3>@message.Text</h3>
@@ -43,37 +42,24 @@ else
 }
 
 @code {
-    private MessageViewModel[] messages;
     private string newMessage = "";
 
     protected override async Task OnInitializedAsync()
     {
-        await LoadMessages();
-    }
-
-    private async Task LoadMessages()
-    {
-        var messagesModel = await Http.GetFromJsonAsync<Message[]>("https://api-dot-blazor-chat.ew.r.appspot.com/chat");
-        messages = messagesModel.Select(m => { MessageViewModel result = m; return result; }).ToArray();
+        await MessagesView.LoadMessages();
     }
 
     private async Task Refresh(MouseEventArgs e)
     {
-        await LoadMessages();
+        await MessagesView.LoadMessages();
     }
 
     private async Task KeyPress(KeyboardEventArgs e)
     {
         if (e.Key == "Enter" && !string.IsNullOrEmpty(newMessage) && !string.IsNullOrEmpty(User.Name))
         {
-            await SendMessage(newMessage, User.Name);
+            await MessagesView.SendMessage(newMessage, User.Name);
             newMessage = "";
         }
-    }
-
-    private async Task SendMessage(string message, string name)
-    {
-        await Http.PutAsJsonAsync<Message>("https://api-dot-blazor-chat.ew.r.appspot.com/chat", new Message() { Text = message, Name = name });
-        await LoadMessages();
     }
 }
