--- a/BlazorChat.Client/Pages/Chat.razor
+++ b/BlazorChat.Client/Pages/Chat.razor
@@ -25,8 +25,13 @@ else
     </div>
 
     <div>
+        <h3>Message</h3>
+        <input @bind="MessageViewModel.NewMessage" @bind:event="oninput" @onkeypress="KeyPress" />
+    </div>
+
+    <div>
         <hr />
-        @foreach (var message in MessagesView.Messages.Reverse())
+        @foreach (var message in MessageViewModel.Messages.Reverse<BlasorChat.Models.Message>())
         {
             <div>
                 <h3>@message.Text</h3>
@@ -38,7 +43,6 @@ else
         }
     </div>
 
-    <input @bind="newMessage" @bind:event="oninput" @onkeypress="KeyPress" />
 }
 
 @code {
